# jemaro_days_2025

cone_detection/: CMakeLists.txt  CMakeLists.txt.user.d07af09  package.xml
cone_detection/config/: cone_detection.yaml
cone_detection/include/: cone_detection.h
cone_detection/launch/: cone_detection.launch.py
cone_detection/src/: voxel_filtering.cpp
jemaro/: CMakeLists.txt  package.xml
jemaro/script/: jemaro_path.py  path_planner.py  turn_left.py  turn_new.py
